--- a/src/main/resources/assets/dusted/lang/en_us.json
+++ b/src/main/resources/assets/dusted/lang/en_us.json
@@ -4,7 +4,7 @@
   "item.dusted.lint": "Lint",
   "item.dusted.vacuum": "Vacuum Cleaner",
   "item.dusted.dust_bunny": "Dust Bunny",
-  "item.dusted.lint_sweater": "Lint Sweater",
+  "item.dusted.itchy_sweater": "Itchy Sweater",
   "item.dusted.maid_hairband": "Maid Hairband",
   "item.dusted.maid_dress": "Maid Dress",
   "item.dusted.maid_skirt": "Maid Skirt",
